# netscope

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  go.mod  go.sum
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
cmd/netscope/: assets.go  assets_test.go  config.go  diff.go  dns.go  findings.go  findings_test.go  main.go  main_test.go  profiles.go  report.go  report_diff_test.go  results.go  safety.go  sources.go  workspace.go
docs/: asset-inventory.md  ci.md  configuration.md  dns-posture.md  findings-lifecycle.md  ipc-schema.md  ipv6.md  packaging.md  publication-checklist.md  recon-sources.md  releasing.md  reporting.md  safety-model.md  service-detection.md  tls-audit.md  workspaces.md
engine/: Cargo.toml
engine/src/: main.rs  scan.rs  targets.rs  types.rs  vuln.rs
packaging/arch/: PKGBUILD
scripts/: checksums.sh  install-release.sh  install.sh  package-arch.sh  package-deb.sh  release-tarball.sh  setup-local-apt-repo.sh  setup-local-pacman-repo.sh
templates/: safe-checks.json
