[package]
name = "netscope-engine"
version = "0.3.0-beta"
edition = "2021"
license = "Apache-2.0"

[dependencies]
rustls = { version = "0.21", features = ["dangerous_configuration"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "=0.3.36"
webpki-roots = "0.25"
x509-parser = "0.15"
